k8s/service-app2.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-python-app2-svc
  namespace: lab09
spec:
  type: ClusterIP
  selector:
    app: devops-info-python-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
