k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-python-svc
  namespace: lab09
spec:
  type: NodePort
  selector:
    app: devops-info-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
